--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@prisma/client": "4.3.1",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "argon2": "^0.29.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^6",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
+    "prisma": "^4.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "3.39.2",
+    "redis": "^4.3.0",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0",
+    "zod-formik-adapter": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "18.7.14",
